<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <!--Edit Text : Input Judul-->
        <EditText
            android:id="@+id/pTitleEt"
            android:background="@drawable/editextstyle"
            android:padding="10dp"
            android:hint="@string/judul"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unggah_foto"
            android:layout_marginTop="5dp"
            android:textSize="17dp"
            android:textStyle="bold"/>

        <!--ImageView : Input Gambar Posting-->
        <ImageView
            android:id="@+id/pImageIv"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/camera"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:minHeight="200dp"/>

        <!--EditText : Input Deskripsi Post-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/hargaEt"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:inputType="number"
                android:padding="10sp"
                android:background="@drawable/editextstyle"
                android:hint="@string/harga_sewa"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textSize="30sp"
                android:text="@string/garisng"/>

            <Spinner
                android:id="@+id/sewa_spinner"
                android:layout_width="130dp"
                android:layout_height="48dp"
                android:entries="@array/mass"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/pilih_kategori_barang_sewa"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/kategori_spinner"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:entries="@array/kategory_sewa"
            android:layout_height="40dp"/>

        <EditText
            android:id="@+id/pDescriptionEt"
            android:background="@drawable/editextstyle"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:hint="@string/deskripsi"
            android:inputType="textCapSentences|textMultiLine"
            android:maxHeight="120dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Button : Publis post-->
        <Button
            android:id="@+id/pUploadBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/upload"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>