<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <com.blogspot.atifsoftwares.circularimageview.CircularImageView
                android:id="@+id/uPictureIv"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_default_img"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/uNameTv"
                    android:text="@string/name"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/pTimeTv"
                    android:textColor="@color/colorBlack"
                    android:text="33 min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/moreBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_more_black" />

        </LinearLayout>

        <TextView
            android:id="@+id/pTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:text="@string/title"
            android:autoLink="all"/>

        <TextView
            android:id="@+id/pDescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_postingan"
            android:textColor="@color/colorBlack"
            android:autoLink="all"/>

        <ImageView
            android:id="@+id/pImageIv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#3B424B"/>

        <TextView
            android:id="@+id/hargaTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="Rp.200000/hari"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorBlack"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pLikeTv"
                android:text="@string/_1_2k_likes"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/pCommentsTv"
                android:text="@string/_1_2k_komentar"
                android:textAlignment="textEnd"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F0F0"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">

                <Button
                    android:id="@+id/likeBtn"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="50sp"
                    android:background="@null"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/commentBtn"
                    android:layout_width="50sp"
                    android:background="@null"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/shareBtn"
                    android:layout_width="50sp"
                    android:background="@null"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>