<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PostDetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_above="@id/commentsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/colorWhite">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/pImageIv"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="fitXY"
                        android:background="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/pTitleTv"
                        android:padding="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:layout_marginTop="10sp"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        android:textStyle="bold|italic"
                        android:text="@string/title" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/hargaTv"
                            android:layout_width="235dp"
                            android:layout_height="wrap_content"
                            android:padding="10sp"
                            android:text="Rp.200000/hari"
                            android:textSize="20sp"
                            android:layout_marginBottom="5dp"
                            android:textColor="@color/colorPrimary"/>

                        <Button
                            android:id="@+id/likeBtn"
                            android:layout_width="40dp"
                            android:background="@null"
                            android:layout_height="40dp"/>

                        <Button
                            android:id="@+id/shareBtn"
                            android:layout_width="40dp"
                            android:background="@null"
                            android:layout_height="40dp"/>

                        <Button
                            android:id="@+id/chatBtn"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@null"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:background="#F5F0F0"/>

                    <LinearLayout
                        android:id="@+id/profileLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical">

                        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
                            android:id="@+id/uPictureIv"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_default_img"
                            android:layout_width="50dp"
                            android:layout_height="50dp"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/uNameTv"
                                android:text="@string/name"
                                android:textColor="@color/colorBlack"
                                android:textSize="20sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:id="@+id/pTimeTv"
                                android:text="33 min"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>

                        <ImageButton
                            android:id="@+id/moreBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:visibility="invisible"
                            android:src="@drawable/ic_more_black" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:background="#F5F0F0"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/pLikeTv"
                            android:text="@string/_1_2k_likes"
                            android:textColor="@color/colorPrimary"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/pCommentsTv"
                            android:text="@string/_1_2k_komentar"
                            android:textAlignment="textEnd"
                            android:layout_weight="1"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:background="#F5F0F0"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deskripsi"
                            android:textStyle="bold"
                            android:textColor="@color/colorBlack"
                            android:textSize="17dp"/>

                        <TextView
                            android:id="@+id/pDescriptionTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/deskripsi_postingan"
                            android:textColor="@color/colorBlack"
                            android:autoLink="all"/>

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/komentar"
                android:textSize="17dp"
                android:layout_marginTop="10sp"
                android:padding="2dp"
                android:textColor="@color/colorBlack"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/commentsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
            android:id="@+id/cAvatarIv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_default_img"/>

        <EditText
            android:id="@+id/commentEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/cAvatarIv"
            android:layout_toStartOf="@id/sendBtn"
            android:background="@color/colorWhite"
            android:hint="@string/komentar"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="10sp"
            android:layout_centerVertical="true"
            android:layout_margin="1dp"/>

        <ImageButton
            android:id="@+id/sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_send"
            android:background="@color/colorWhite"/>


    </RelativeLayout>

</RelativeLayout>